--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   },
   "browserslist": {
     "production": [
-      "defaults and supports es6-module",
-      "maintained node versions"
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
     "development": [
       "last 1 chrome version",
